--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/lassisg/py_aibi/"
 python = "^3.8"
 scikit-image = "^0.16.2"
 pydicom = "^1.4.2"
+medpy = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
