--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "restructuredtext.confPath": ""
+    "restructuredtext.confPath": "",
+    "python.pythonPath": "C:\\Users\\Leandro\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\py-aibi-A-h_kMYD-py3.8\\Scripts\\python.exe"
 }
